--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@ body {
   }
 }
 </style>
+  <script>
+    if(window.innerHeight > window.innerWidth){
+
+    alert("Please use Landscape!");
+
+}
+    </script>
 </head>
 <body>
 
